--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,11 +4,15 @@ WORKDIR /app
 
 COPY package.json .
 
+COPY package-lock.json .
+
 RUN npm install
 
 COPY . .
 
 EXPOSE 3000
 # required for docker desktop port mapping
+
+RUN npm test
 
 CMD ["npm", "start"]
