--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -30,6 +30,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 env:
   AWS_REGION: us-east-2 # set this to your preferred AWS region, e.g. us-west-1
