--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -36,7 +36,7 @@ on:
 
 env:
   AWS_REGION: us-east-2 # set this to your preferred AWS region, e.g. us-west-1
-  # ECR_REPOSITORY: turners-demo # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: turners-demo # set this to your Amazon ECR repository name
   ECS_SERVICE: turners-car-service # set this to your Amazon ECS service name
   ECS_CLUSTER: turners-car-demo # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION:
@@ -92,7 +92,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          ECR_REPOSITORY: ${{ secret.ECR_REPOSITORY }}
+          ECR_REPOSITORY: ${{ secret.ECR_REPOSITORY}}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
