--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -92,7 +92,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
-          ECR_REPOSITORY: ${{ secret.ECR_REPOSITORY}}
+          # ECR_REPOSITORY: ${{ secret.ECR_REPOSITORY}}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
